BUG#37120: optimizer_switch allowable values not according to specification - Use the correct length of "no_materialization" string in optimizer_switch_names_len.   It was 19 instead of 18 which caused \0 to be included which caused the string representation   of @@optimizer_switch to be truncated.